<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="LoginFragment">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/space_16dp">

			<ImageView
				android:id="@+id/logo_image"
				android:layout_width="144dp"
				android:layout_height="144dp"
				android:layout_gravity="center_horizontal"
				android:layout_marginStart="@dimen/space_16dp"
				android:layout_marginTop="@dimen/space_16dp"
				android:layout_marginEnd="@dimen/space_16dp"
				android:contentDescription="@string/logo_description"
				app:srcCompat="@drawable/ic_baseline_account_circle_24"
				app:tint="@color/colorPrimary" />

			<TextView
				android:id="@+id/email_label"
				style="@style/InputLabelTextView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/space_32dp"
				android:labelFor="@+id/email_input"
				android:text="@string/email" />

			<EditText
				android:id="@+id/email_input"
				style="@style/InputEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/space_8dp"
				android:inputType="textEmailAddress"
				android:selectAllOnFocus="true" />

			<TextView
				android:id="@+id/password_label"
				style="@style/InputLabelTextView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/space_16dp"
				android:labelFor="@+id/password_input"
				android:text="@string/password" />

			<EditText
				android:id="@+id/password_input"
				style="@style/InputEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/space_8dp"
				android:imeOptions="actionDone"
				android:inputType="textPassword"
				android:selectAllOnFocus="true" />

			<Button
				android:id="@+id/login_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="start"
				android:layout_marginTop="@dimen/space_32dp"
				android:text="@string/action_sign_in"
				android:theme="@style/PrimaryButton" />

			<Button
				android:id="@+id/register_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="start"
				android:layout_marginTop="@dimen/space_16dp"
				android:text="@string/action_register"
				android:theme="@style/SecondaryButton" />

		</LinearLayout>

	</ScrollView>

</layout>