<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/navigation"
	app:startDestination="@id/loginFragment">
	<fragment
		android:id="@+id/loginFragment"
		android:name="com.udacity.shoestore.LoginFragment"
		android:label="@string/login_title"
		tools:layout="@layout/fragment_login">
		<action
			android:id="@+id/action_loginFragment_to_welcomeFragment"
			app:destination="@id/welcomeFragment"
			app:enterAnim="@anim/slide_in_right"
			app:exitAnim="@anim/slide_out_left"
			app:popEnterAnim="@anim/slide_in_left"
			app:popExitAnim="@anim/fade_out"
			app:popUpTo="@id/loginFragment"
			app:popUpToInclusive="true" />
	</fragment>
	<fragment
		android:id="@+id/welcomeFragment"
		android:name="com.udacity.shoestore.WelcomeFragment"
		android:label="@string/welcome_title"
		tools:layout="@layout/fragment_welcome">
		<action
			android:id="@+id/action_welcomeFragment_to_instructionFragment"
			app:destination="@id/instructionFragment"
			app:enterAnim="@anim/slide_in_right"
			app:exitAnim="@anim/slide_out_left"
			app:popEnterAnim="@anim/slide_in_left"
			app:popExitAnim="@anim/slide_out_right"
			app:popUpTo="@id/welcomeFragment"
			app:popUpToInclusive="true" />
	</fragment>
	<fragment
		android:id="@+id/instructionFragment"
		android:name="com.udacity.shoestore.InstructionFragment"
		android:label="@string/instruction_title"
		tools:layout="@layout/fragment_instruction">
		<action
			android:id="@+id/action_instructionFragment_to_shoeListFragment"
			app:destination="@id/shoeListFragment"
			app:enterAnim="@anim/slide_in_right"
			app:popEnterAnim="@anim/fade_in"
			app:popExitAnim="@anim/fade_out"
			app:popUpTo="@id/navigation"
			app:popUpToInclusive="true" />
	</fragment>
	<fragment
		android:id="@+id/shoeListFragment"
		android:name="com.udacity.shoestore.ShoeListFragment"
		android:label="@string/shoe_list_title"
		tools:layout="@layout/fragment_shoe_list">
		<action
			android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
			app:destination="@id/shoeDetailFragment"
			app:enterAnim="@anim/fade_in"
			app:popEnterAnim="@anim/fade_in"
			app:popExitAnim="@anim/fade_out" />
	</fragment>
	<fragment
		android:id="@+id/shoeDetailFragment"
		android:name="com.udacity.shoestore.ShoeDetailFragment"
		android:label="@string/shoe_detail_title"
		tools:layout="@layout/fragment_shoe_detail" />
	<action
		android:id="@+id/action_to_loginFragment"
		app:destination="@id/loginFragment"
		app:exitAnim="@anim/slide_out_left"
		app:launchSingleTop="true"
		app:popEnterAnim="@anim/slide_in_left"
		app:popExitAnim="@anim/fade_out"
		app:popUpTo="@id/navigation"
		app:popUpToInclusive="true" />
</navigation>